--- a/CLASE 10/styles.css
+++ b/CLASE 10/styles.css
@@ -38,6 +38,7 @@ header{
     min-width: 320px;
     height: 334px;
     text-align: center;
+    background: linear-gradient(rgba(32, 30, 28, 1),rgba(247, 147, 26, 1));
 }
 header img{
     width: 150px;
@@ -53,4 +54,17 @@ header img{
     margin-top: 40px;
     text-align: center;
     align-self: center;
+}
+.header--tilte-container h1{
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.header--tilte-container p{
+    margin-top: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--soft-orange);
 }
